--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -821,7 +821,7 @@ RSVP form
         left: 30px;
         transform: translateY(-50%);
       }
-      i.fa-user, i.fa-users, i.fa-envelope, .fa-key {
+      i.fa-user, i.fa-envelope, i.fa-check-square-o, i.fa-cutlery {
         font-size: 14px;
         position: absolute;
         top: 50%;
@@ -848,6 +848,15 @@ RSVP form
       }
       input:-ms-input-placeholder {
         color: $form-placeholder;
+      }
+      select {
+        padding-left: 68px;
+        width: 100%;
+        height: 100%;
+        -moz-border-radius: 6px;
+        -webkit-border-radius: 6px;
+        border-radius: 6px;
+        border: none;        
       }
     }
   }
